app/javascript/styles/mastodon/components.scss
/* ... */
.dropdown {
  display: inline-block;
}

.dropdown__content {
  display: none;
  position: absolute;
}

.dropdown-menu__separator {
  border-bottom: 1px solid var(--color-border-primary);
  margin: 5px 0;
  height: 0;
}

.dropdown-menu {
  background: var(--color-bg-primary);
  backdrop-filter: $backdrop-blur-filter;
  border: 1px solid var(--color-border-primary);
  padding: 4px;
  border-radius: 4px;
  box-shadow: var(--dropdown-shadow);
  z-index: 9999;

  &__text-button {
    display: inline-flex;
    align-items: center;
    color: inherit;
    background: transparent;
    border: 0;
    margin: 0;
    padding: 0;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;

    &:focus-visible {
      outline: 1px dotted;
    }

    &:hover {
      text-decoration: underline;
    }

    .icon {
      width: 15px;
      height: 15px;
    }
  }

  &__container {
    &__header {
      border-bottom: 1px solid var(--color-border-primary);
      padding: 10px 14px;
      padding-bottom: 14px;
      margin-bottom: 4px;
      font-size: 13px;
      line-height: 18px;
      color: var(--color-text-secondary);
    }

    &__list {
      list-style: none;

      &--scrollable {
        max-height: 300px;
        overflow-y: scroll;
      }
    }

    &--loading {
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 30px 45px;
    }
  }

  &.left {
    transform-origin: 100% 50%;
  }

  &.top {
    transform-origin: 50% 100%;
  }

  &.bottom {
    transform-origin: 50% 0;
  }

  &.right {
    transform-origin: 0 50%;
  }
}

.dropdown-menu__item {
  font-size: 13px;
  line-height: 18px;
  font-weight: 500;
  display: block;

  &--dangerous {
    color: var(--color-text-error);
  }

  &--highlighted {
    color: var(--color-text-brand);
  }

  &-content {
    display: flex;
    flex-direction: column;
  }

  &-subtitle {
    color: var(--color-text-tertiary);
    font-weight: 400;
  }

  a,
  button {
    font: inherit;
    display: flex;
    align-items: center;
    gap: 8px;
    white-space: inherit;
    width: 100%;
    padding: 10px 14px;
    border: 0;
    margin: 0;
    background: transparent;
    box-sizing: border-box;
    text-decoration: none;
    color: inherit;
    text-align: inherit;
    border-radius: 4px;

    &:focus,
    &:hover,
    &:active {
      &:where(:not(:disabled, [aria-disabled='true'])) {
        background: var(--color-bg-brand-softest);
        outline: 0;
      }
    }

    &:focus-visible {
      outline: var(--outline-focus-default);
    }
  }

  button:disabled,
  button[aria-disabled='true'] {
    color: var(--color-text-disabled);
    cursor: default;

    &:focus {
      color: var(--color-text-on-disabled);
      background: var(--color-bg-disabled);
      outline: 0;
    }
  }

  button:is(:disabled, [aria-disabled='true']) &-subtitle {
    color: inherit;
  }
}

.reblog-menu-item {
  max-width: 360px;
}

.inline-account {
  display: inline-flex;
  align-items: center;
  vertical-align: top;

  .account__avatar {
    margin-inline-end: 5px;
    border-radius: 50%;
  }

  strong {
    font-weight: 600;
  }
}

.columns-area {
  display: flex;
  flex: 1 1 auto;
  flex-direction: row;
  justify-content: flex-start;
  position: relative;

  .layout-multiple-columns & {
    overflow-x: auto;

    &.unscrollable {
      overflow-x: hidden;
    }
  }

  &__panels {
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    gap: 16px;
    width: 100%;
    height: 100%;
    min-height: 100vh;
    min-height: 100dvh;
    padding-inline: 10px;
    padding-bottom: env(safe-area-inset-bottom);

    &__pane {
      height: 100%;
      overflow: hidden;
      display: flex;
      justify-content: flex-end;
      min-width: 285px;

      &--start {
        justify-content: flex-start;
      }

      &__inner {
        position: fixed;
        width: 285px;
        height: 100%;
      }
    }

    &__main {
      box-sizing: border-box;
      width: 100%;
      flex: 0 1 auto;
      display: flex;
      flex-direction: column;
      contain: inline-size layout paint style;
      container: column / inline-size;
      color: var(--color-text-primary);
      background-color: var(--color-bg-primary);

      @media screen and (min-width: $no-gap-breakpoint) {
        max-width: 600px;
      }
    }
  }
}

.ui__navigation-bar {
  position: fixed;
  bottom: 0;
  z-index: 3;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  gap: 8px;
  padding-bottom: env(safe-area-inset-bottom);
  background: var(--color-bg-primary);
  backdrop-filter: $backdrop-blur-filter;
  border-top: 1px solid var(--color-border-primary);
  box-sizing: border-box;

  .layout-multiple-columns & {
    display: none;
  }

  &__items {
    display: grid;
    grid-auto-columns: minmax(0, 1fr);
    grid-auto-flow: column;
    padding: 0 16px;

    &.active {
      flex: 1;
      padding: 0;
    }
  }

  &__sign-up {
    display: flex;
    align-items: center;
    gap: 4px;
    padding-inline-start: 16px;
  }

  &__item {
    display: flex;
    flex-direction: column;
    align-items: center;
    background: transparent;
    border: none;
    gap: 8px;
    font-size: 12px;
    font-weight: 500;
    line-height: 16px;
    padding-top: 11px;
    padding-bottom: 15px;
    border-top: 4px solid transparent;
    text-decoration: none;
    color: inherit;

    &.active {
      color: var(--color-text-brand);
    }

    &:focus {
      outline: 0;
    }

    &:focus-visible {
      border-top-color: var(--color-border-brand);
      border-radius: 0;
    }
  }
}

.tabs-bar__wrapper {
  background: var(--color-bg-primary);
  backdrop-filter: $backdrop-blur-filter;
  position: sticky;
  top: 0;
  z-index: 2;
  border-top: 0;

  @media screen and (min-width: $no-gap-breakpoint) {
    border-top: 10px solid var(--color-bg-primary);
  }
}
/* ... */

